--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<div class="content">
       <div class="board" id="scene1">
         <div class="animate__animated animate__bounce">
-          <img src="/logo.jpeg" style="width: 100px;">
+          <img src="logo.jpeg" style="width: 100px;">
           <h1>EZQuiz v1.0</h1>
           <p>Một tựa game bởi Dương Tùng Anh</p>
           <center>
@@ -24,19 +24,19 @@
       <div class="board" id="scene2">
           <p><b>Chọn thể loại bạn muốn chơi</b></p>
           <div class="language" onclick="languageStart()">
-            <img class="language_img" src="/assets/language.jpeg">
+            <img class="language_img" src="assets/language.jpeg">
             <div class="language_text">Ngôn ngữ</div>
           </div>
           <div class="iq">
-            <img class="iq_img" src="/assets/iq.png">
+            <img class="iq_img" src="assets/iq.png">
             <div class="iq_text">Câu đố</div>
           </div>
           <div class="edu">
-            <img class="edu_img" src="/assets/education.png">
+            <img class="edu_img" src="assets/education.png">
             <div class="edu_text">Học đường</div>
           </div>
           <div class="tech">
-            <img class="tech_img" src="/assets/science.jpeg">
+            <img class="tech_img" src="assets/science.jpeg">
             <div class="tech_text">Khoa học công nghệ</div>
           </div>
       </div>
